--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,15 @@
+@font-face {
+  font-family: Arista-Pro-Light;
+  src: url(@/../../../public/fonts/Arista-Pro-Light.ttf);
+}
+
+@font-face {
+  font-family: Ermilov;
+  src: url(@/../../../public/fonts/Ermilov-bold.otf);
+}
+
 :root {
-  --bg: #0d0c22;
+  --bg: #000000;
   --bgSoft: #2d2b42;
   --text: white;
   --textSoft: #e5e5e5;
@@ -10,6 +20,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Ermilov;
 }
 
 body {
