--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-  --bg: #000000;
+  --bg: #2a2a2a;
   --bgSoft: #2d2b42;
   --text: white;
   --textSoft: #e5e5e5;
@@ -34,7 +34,6 @@ a {
 }
 
 .container {
-  width: 1536px;
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
@@ -42,47 +41,4 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-@media (max-width: 1536px) {
-  .container {
-    width: 1366px;
-  }
-}
-
-@media (max-width: 1366px) {
-  .container {
-    width: 1280px;
-  }
-}
-
-@media (max-width: 1280px) {
-  .container {
-    width: 1024px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    width: 640px;
-  }
-}
-
-@media (max-width: 640px) {
-  .container {
-    width: 475px;
-  }
-}
-@media (max-width: 475px) {
-  .container {
-    width: 380px;
-  }
 }
