--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,70 +1,17 @@
 .container {
   display: flex;
+  width: 100%;
+  justify-content: center;
   gap: 100px;
 }
 
-.textContainer {
-  flex: 1;
+.linkProducts {
   display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-.title {
-  font-size: 96px;
-}
-
-.desc {
-  font-size: 20px;
-}
-
-.buttons {
-  display: flex;
-  gap: 20px;
-}
-
-.button {
-  padding: 20px;
-  min-width: 120px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-}
-
-.button:first-child {
-  background-color: var(--btn);
-  color: var(--text);
-}
-
-.brands {
-  width: 500px;
-  height: 50px;
-  position: relative;
-  filter: grayscale(1);
-}
-
-.imgContainer {
-  flex: 1;
-  position: relative;
-}
-
-@media (max-width: 1024px) {
-  .container {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .buttons {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 768px) {
-  .title {
-    font-size: 64px;
-  }
-
-  .brands {
-    width: 100%;
-  }
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  width: 40vh;
+  height: 10vh;
+  background-color: gray;
+  color: white;
 }
