--- a/src/app/products/products.module.css
+++ b/src/app/products/products.module.css
@@ -7,6 +7,31 @@
 .productCard {
   background-color: rgb(229, 229, 229);
   border-radius: 3%;
-  height: 50vh;
   width: 30%;
+}
+
+@media screen and (max-width: 1100px) {
+  .productCard {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .productCard {
+    width: 80%;
+    height: 60vh;
+  }
+  .container {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .productCard {
+    width: 90%;
+    height: 60vh;
+  }
+  .container {
+    justify-content: center;
+  }
 }
