added mui theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@ a {
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
+  background-image: url("../../public/images/Lf3OSzevGORsWn27cvIz--1--lno8h_2x-real-esrgan-x4-plus.webp");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
