--- a/src/components/rating/rating.module.css
+++ b/src/components/rating/rating.module.css
@@ -1,7 +1,13 @@
+.ratingContainer {
+  display: flex;
+  align-items: center;
+}
+
 .starsOuter {
   display: inline-block;
   position: relative;
   font-family: FontAwesome;
+  margin-left: 0.5em;
 }
 .starsOuter::before {
   content: "\2606 \2606 \2606 \2606 \2606";
