--- a/src/app/products/[id]/singleProduct.module.css
+++ b/src/app/products/[id]/singleProduct.module.css
@@ -1,8 +1,9 @@
 .container {
   height: 100vh;
+  max-width: 1200px;
   display: flex;
   margin: 0 auto;
-  color: white;
+  margin-top: 3em;
 }
 
 .img {
@@ -14,7 +15,9 @@
   display: flex;
   align-content: flex-start;
   gap: 15px;
-  min-width: 600px;
+  padding-left: 5em;
+  margin-left: 9em;
+  width: calc(100% - 456px);
 }
 
 .mainImgContainer {
@@ -34,18 +37,13 @@
 }
 
 .additionalImage {
+  min-width: 12vh;
   width: 100%;
   height: 25%;
   position: relative;
 }
 
 .info {
-  width: 40vh;
-}
-
-.wrapperPrice {
-}
-
-.price,
-.discount {
+  margin-top: 1em;
+  margin-left: 1em;
 }
