--- a/src/app/products/products.module.css
+++ b/src/app/products/products.module.css
@@ -1,11 +1,16 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 250vh;
+  width: 95%;
+  margin: auto;
+  margin-top: 3em;
   gap: 8vh;
 }
 
 .productCard {
-  background-color: rgb(229, 229, 229);
+  background-color: rgb(59, 59, 59);
   border-radius: 3%;
   width: 30%;
 }
